# cg_shaders

./: Makefile  README.txt
reference/pa3_starter/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pa3
reference/pa3_starter/cmake/: FindGLEW.cmake
reference/pa3_starter/src/: GLSLProgram.h  main.cpp  shader.h  trackball.cpp  trackball.h
reference/pa3_starter/src/utils/: macros.h
shaders/: blinn_phong.vert  checkerboard.frag  checkerboard.vert  gouraud.frag  gouraud.vert  normal_map.frag  normal_map.vert  toon.frag  toon.frag~  toon.vert  toon.vert~  uv_checkerboard.frag  uv_checkerboard.vert
src/: .trackball.cpp.swp  CMakeCache.txt  GLSLProgram.cpp  GLSLProgram.h  GLScreenCapturer.cpp  GLScreenCapturer.h  Makefile  camera.cpp  camera.h  cmake_install.cmake  gridpiece.cpp  gridpiece.h  linalg.h  main.cpp  model.h  playercycler.cpp  playercycler.h  pointlight.cpp  pointlight.h  revolutejoint.cpp  revolutejoint.h  scene.cpp  scene.h  skeleton.cpp  skeleton.h
